--- a/project/index.html
+++ b/project/index.html
@@ -50,7 +50,7 @@
 
       <div class="code text-light alert bg-dark" id="code">
         <span class="function">curl</span>
-        install.dephell.org
+        -L dephell.org/install
         <span class="operator">|</span>
         python3
 
