--- a/project/index.html
+++ b/project/index.html
@@ -43,7 +43,7 @@
         <i class="fab fa-github"></i>
         GitHub
       </a>
-      <a href="https://docs.dephell.org" role="button" class="btn btn-dark btn-lg btn-block">
+      <a href="https://dephell.org/docs/" role="button" class="btn btn-dark btn-lg btn-block">
         <i class="fas fa-book"></i>
         Docs
       </a>
